--- a/In_ref_figure_biasVariance_Hastie__.tex
+++ b/In_ref_figure_biasVariance_Hastie__.tex
@@ -25,6 +25,10 @@ $Error = \Expect[L(Y,\hat{f}(X))] $ i.e. the average the average generalization 
 function that indicates the partition to which observation i is allocated by the randomization. Denote by}
 
 
+\subsection{Convergence of the }
+\textbf{Vapnik–Chervonenkis Dimension}
+Related to estimating the true expected prediction error of the underlying distribution with finite samples.
+
 \subsection{Bengio, GrandValet - No Unbiased Estimator of the Variance of K-Fold Cross-Validation}
 \textbf{Cross Validation}: 
 \textit{The standard measure of accuracy for trained models is the prediction error (PE), i.e. the expected loss on future examples. Learning algorithms themselves are often compared on their average performance, which estimates expected value of prediction error (EPE) over training sets.
