--- a/In_ref_figure_biasVariance_Hastie__.tex
+++ b/In_ref_figure_biasVariance_Hastie__.tex
@@ -27,7 +27,12 @@ function that indicates the partition to which observation i is allocated by the
 
 \subsection{Convergence of the }
 \textbf{Vapnik–Chervonenkis Dimension}
+\cite{vapnik-nature2013}
+\cite{cherkassky-learning2007}
+
 Related to estimating the true expected prediction error of the underlying distribution with finite samples.
+
+
 
 \subsection{Bengio, GrandValet - No Unbiased Estimator of the Variance of K-Fold Cross-Validation}
 \textbf{Cross Validation}: 
