--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -246,3 +246,23 @@ doi="10.1023/A:1022899518027",
 url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
+@book{vapnik-nature2013,
+  title={The Nature of Statistical Learning Theory},
+  author={Vapnik, V.},
+  isbn={9781475732641},
+  lccn={95024205},
+  series={Information Science and Statistics},
+  year={2013},
+  publisher={Springer New York}
+}
+
+
+@book{cherkassky-learning2007,
+   title = "Learning from data : concepts, theory, and methods",
+   author = "Cherkassky, Vladimir S. and Mulier, Filip",
+   publisher = "Hoboken, N.J. John Wiley",
+   isbn = "978-0-471-68182-3",
+   year = 2007
+}
+
+
