--- a/In_ref_figure_biasVariance_Hastie__.tex
+++ b/In_ref_figure_biasVariance_Hastie__.tex
@@ -32,6 +32,10 @@ function that indicates the partition to which observation i is allocated by the
 
 Related to estimating the true expected prediction error of the underlying distribution with finite samples.
 
+VC dimension true error rate minimization. 
+Shattering
+
+Let $\mathcal {A}= \{A_1,A_{2},\dots \}}$ be a set family and $T$  another set, then $\mathcal {A}$ shatters $T$ if for every subset $t \in T$ there exists a set $A' \in \mathcal {A} $ such that $ T \cap A' = t$. The VC dimension of $\mathcal {A}$ is the biggest cardinality of a set shattered by $\mathcal {A}$. It is important to note that this means \texit{any} possible set shattered by $\mathcal {A}$
 
 
 \subsection{Bengio, GrandValet - No Unbiased Estimator of the Variance of K-Fold Cross-Validation}
