--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -30,7 +30,7 @@ Shattering
 \begin{definition}{Shattering}
 
 Let $\mathcal {A}= \{A_1,A_{2},\dots \}$ be a set family and $T$  another set, then $\mathcal {A}$ shatters $T$ if for every subset $t \subseteq T$ there exists a set $A' \subseteq \mathcal {A} $ such that $ T \cap A' = t$. The VC dimension of $\mathcal {A}$ is the biggest cardinality of a set shattered by $\mathcal {A}$. Note that by definition this means \textit{any} possible set shattered by $\mathcal {A}$. Finally
- \end{Shattering}
+ \end{definition}
 
 
 \begin{definition}{Vapnik–Chervonenkis Dimension}
@@ -41,5 +41,3 @@ Let $\mathcal {A}= \{A_1,A_{2},\dots \}$ be a set family and $T$  another set, t
  	$$ Err_{\mathrm{T}} =  EPE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) |  \mathrm{T}\right]$$
  \end{definition}
  
-
-
