--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -32,12 +32,13 @@ Shattering
 Let $\mathcal {A}= \{A_1,A_{2},\dots \}$ be a set family and $T$  another set, then $\mathcal {A}$ shatters $T$ if for every subset $t \subseteq T$ there exists a set $A' \subseteq \mathcal {A} $ such that $ T \cap A' = t$. The VC dimension of $\mathcal {A}$ is the biggest cardinality of a set shattered by $\mathcal {A}$. Note that by definition this means \textit{any} possible set shattered by $\mathcal {A}$. Finally
  \end{definition}
 
+In a supervised learning setting, let  $\mathrm{T} = (\textbf{X},\textbf{Y})$ be the training set and $Y = \{0,1 \}$. Let $\mathcal {F}$ be a class of classifiers where $f: X \rightarrow Y \, \forall f \in \mathcal {F}$. $t$ is said to be picked out by $\mathcal {F}$ if there exists a classifier $f \in \mathcal {F}$ such that $T = f^{-1}(\{1\})$. 
+A set $T$ is said to be shattered by $\mathcal {F}$ if all of its subsets are picked out by the class of functions.
 
-\begin{definition}{Vapnik–Chervonenkis Dimension}
- 	In a supervised learning setting, let  $\mathrm{T} = (\textbf{X},\textbf{Y})$ be the training set and $Y = \{0,1 \}$. A classifier is said to 
- 	The Vapnik–Chervonenkis Dimension is the largest 
+\begin{definition}{Vapnik–Chervonenkis (VC) Dimension}
  	
- 	as error is also known as the prediction error. Given that any model is always built on the data, this value is the model's expected error over an independent training set $\mathrm{Ts}$:
- 	$$ Err_{\mathrm{T}} =  EPE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) |  \mathrm{T}\right]$$
- \end{definition}
+ 	The Vapnik–Chervonenkis Dimension (VC) of a class of binary functions is the cardinality of the largest set which is shattered by $\mathcal {F}$.
+\end{definition}\footnote{The VC dimension is briefly introduced here for }
+ 
+Given that all functions can be 
  
